Add matrix-multiply-tiled sample

--- a/kernels/matrix-multiply-tiled/Makefile
+++ b/kernels/matrix-multiply-tiled/Makefile
@@ -20,30 +20,7 @@
 # THE SOFTWARE.
 #
 
+NAME	:= matrix-multiply-tiled
 
-SUBDIRS		:= \
-	vector-add \
-	matrix-multiply \
-	matrix-multiply-tiled
 
-CLEANDIRS 	= $(SUBDIRS:%=clean-%)
-TESTDIRS	 	= $(SUBDIRS:%=test-%)
-
-.PHONY	: subdirs $(SUBDIRS)
-.PHONY	: subdirs $(CLEANDIRS)
-.PHONY	: subdirs $(TESTDIRS)
-.PHONY	: all clean test
-
-subdirs	: $(SUBDIRS)
-
-$(SUBDIRS)	:
-	@$(MAKE) -C $@
-
-test: $(TESTDIRS) all
-$(TESTDIRS): 
-	$(MAKE) -C $(@:test-%=%) test
-
-clean: $(CLEANDIRS)
-$(CLEANDIRS): 
-	$(MAKE) -C $(@:clean-%=%) clean
-
+include ../../common.mk
