--- a/opencl/matmul/CMakeLists.txt
+++ b/opencl/matmul/CMakeLists.txt
@@ -22,16 +22,16 @@
 
 set(_sources  matmul.cpp)
 
-set(_resources  matmul_kernel.cl.h
-                ${CMAKE_CURRENT_BINARY_DIR}/matmul_kernel.ptx.h)
+set(_resources  ${CMAKE_CURRENT_BINARY_DIR}/matmul_kernel.cl.res
+                ${CMAKE_CURRENT_BINARY_DIR}/matmul_kernel.ptx.res)
 
 compile_opencl(matmul_kernel.ptx matmul_kernel.cl)
 
-embed_resource(matmul_kernel.cl.h ${CMAKE_CURRENT_SOURCE_DIR}/matmul_kernel.cl)
-embed_resource(matmul_kernel.ptx.h matmul_kernel.ptx)
+embed_resource(matmul_kernel.cl.res ${CMAKE_CURRENT_SOURCE_DIR}/matmul_kernel.cl)
+embed_resource(matmul_kernel.ptx.res matmul_kernel.ptx)
 
 include_directories(${CMAKE_CURRENT_BINARY_DIR})
 add_executable(ocl-matmul ${_sources} ${_resources})
 target_link_libraries(ocl-matmul ${OPENCL_LIBRARY} sampleutil)
 
-add_dependencies(ocl-matmul matmul_kernel.cl.h-build matmul_kernel.ptx-build matmul_kernel.ptx.h-build)
+add_dependencies(ocl-matmul matmul_kernel.cl.res-build matmul_kernel.ptx.res-build)
